=== HEAD

* Add after_commit and after_rollback hooks to Database objects (jeremyevans)

* Support savepoints inside prepared transactions on MySQL (jeremyevans)

* Support opening transactions to multiple shards of the same Database object in the same Thread (jeremyevans)

* Add Sequel.transaction for running transactions on multiple databases at the same time (jeremyevans)

* Support :rollback => :always option in Database#transaction to always rollback the transaction (jeremyevans)

* Support :rollback => :reraise option in Database#transaction to reraise the Sequel::Rollback exception (jeremyevans)

* Add support for connecting to Apache Derby databases using the jdbc adapter (jeremyevans)

* Add support for connecting to HSQLDB databases using the jdbc adapter (jeremyevans)

* Fix inserting all default values into a table on DB2 (jeremyevans)

* Add :qualify option to many_to_one associations for whether to qualify the primary key column with the associated table (jeremyevans)

* Modify rcte_tree plugin to use column aliases if recursive CTEs require them (jeremyevans)

* Add Dataset#recursive_cte_requires_column_aliases? method to check if you must provide an argument list for a recursive CTE (jeremyevans)

* Much better support for Oracle in both the oci8-based oracle adapter and the jdbc oracle subadapter (jeremyevans)

* Handle CTEs in subselects in more places on databases that don't natively support CTEs in subselects (jeremyevans)

* Change Dataset#to_hash to not call the row_proc if 2 arguments are given (jeremyevans)

* Change Dataset#map to not call the row_proc if an argument is given (jeremyevans)

* Make Dataset#select_map and #select_order_map return an array of single element arrays if given an array with a single symbol (jeremyevans)

* Make Dataset#columns work correctly on jdbc, odbc, ado, and dbi adapters when using an emulated offset on MSSQL and DB2 (jeremyevans)
